2005-08-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm: Merge RTDM patch level #8.

	* include/nucleus/asm-uvm/system.h (main): Mlockall MCL_FUTURE too.

	* skins/posix/lib/thread.c (__pthread_trampoline): Switch to
	primary mode before entering the thread body.

	* skins/posix/syscall.c (__pthread_set_mode_np): Add primary mode
	switch through PTHREAD_PRIMARY.

	* skins/rtdm: Merge RTDM patch level #7.

	* nucleus/timer.c: Refactor using function tables for periodic and
	aperiodic modes. Aperiodic mode is now the built-in one, and
	periodic has become optional, which is more consistent wrt the hw
	situation.

2005-08-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c: Alloc hash-table from host memory and
	properly check for failure.

2005-08-08  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc, include/nucleus: Finalize dual I-pipe/Adeos support
	for ppc.

2005-08-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/syscall.c, skins/posix/lib/clock.c: Allow
	CLOCK_REALTIME to be used. Fix error handling.

	* nucleus/pod.c (xnpod_set_time): Do not assume that
	nkpod->wallclock_offset is 0.

2005-08-08  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/*.[ch]: Rename initialization and cleanup functions 
	_pkg_init/_pkg_cleanup for consistency with native skin.

	* skins/posix/mq.c: Use registry.c functions.

	* skins/posix/registry.c: attempt of generic support for
	open/close/unlink factored-out of mqueues implementation.

	* skins/posix/clock.c: remove check for NULL pointers.
	(clock_nanosleep): better error statuses, handle timer nucleus
	clock wrap-around correctly.

2005-08-07  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/syscall.h: Add forced fast syscall
	access directly branching to the VSYSCALL DSO for NPTL-enabled
	platforms.

2005-08-06  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_lock_timers): Do not elapse outstanding